--- a/lib/systemd/system/hak5-c2-server-proxy.service
+++ b/lib/systemd/system/hak5-c2-server-proxy.service
@@ -4,6 +4,7 @@ After=network.target syslog.target
 
 [Service]
 Type=simple
+WorkingDirectory=/etc/hak5
 EnvironmentFile=/etc/hak5/c2-proxy.cfg
 ExecStart=/usr/bin/c2-server -hostname $HOSTNAME -db $DB_PATH -listenip $LISTEN_IP -listenport $LISTEN_PORT -sshport $SSH_PORT -reverseProxy -reverseProxyPort $REVERSE_PROXY_PORT
 ExecReload=/bin/kill -HUP $MAINPID
