--- a/lib/systemd/system/hak5-c2-server-https.service
+++ b/lib/systemd/system/hak5-c2-server-https.service
@@ -5,6 +5,7 @@ Conflicts=hak5-c2-server-https@.service hak5-c2-server-https-custom.service hak5
 
 [Service]
 Type=simple
+WorkingDirectory=/etc/hak5
 EnvironmentFile=/etc/hak5/c2-base.cfg
 ExecStart=/usr/bin/c2-server -hostname $HOSTNAME -db $DB_PATH -listenip $LISTEN_IP -listenport $LISTEN_PORT -sshport $SSH_PORT -https
 ExecReload=/bin/kill -HUP $MAINPID
